# generalized_planning_mapping_microbots

./: .gitignore  README.md  ROS2_INSTALLATION_GUIDE.txt  robot_detection.py
past stuff/: README.md  find_camera.py  path_planning_example.py  robot_detection.py  yolo_cam.py
ros2_ws/src/microbot_detector_ros2/: CMakeLists.txt  CMakeLists.txt.backup  QUICKSTART.md  README.md  package.xml  setup.py
ros2_ws/src/microbot_detector_ros2/config/: detector_params.yaml
ros2_ws/src/microbot_detector_ros2/launch/: microbot_detector.launch.py
ros2_ws/src/microbot_detector_ros2/microbot_detector_ros2/: __init__.py  camera_calibration.py  camera_calibration.py.backup  microbot_detector_node.py  microbot_detector_node.py.backup  visualize_grid.py
ros2_ws/src/microbot_detector_ros2/msg/: MicrobotArray.msg  MicrobotPosition.msg  OccupancyGrid.msg
